--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
   google_fonts: ^3.0.1
+  percent_indicator: ^4.2.2
+  dio: ^4.0.6
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
